test/expected/explain_o_plus2_rkd_rk.out
explain S& operator++(S&, double)
                          ^
27: error: parameter of postfix non-member operator ++ must be int
